wbp_y and wbp_yz provided

--- a/linux/release20111012/Makefile
+++ b/linux/release20111012/Makefile
@@ -93,6 +93,7 @@ getcodes: untar
 	patch -p1 < ./ghemical.release20111012.eng1_mm_default_wbp.patch
 	patch -p1 < ./ghemical.release20111012.eng1_mm_default_wbp_2.patch
 	patch -p1 < ./ghemical.release20111012.make_plot_crd_diff_2.patch
+	patch -p1 < ./ghemical.release20111012.eng1_mm_default_wbp_3.patch
 
 cash:
 	mv ghemical-3.0.0    ghemical-3.0.0.cashed
