--- a/linux/release20111012/Makefile
+++ b/linux/release20111012/Makefile
@@ -96,6 +96,7 @@ getcodes: untar
 	patch -p1 < ./ghemical.release20111012.eng1_mm_default_wbp_3.patch
 	patch -p1 < ./ghemical.release20111012.log_box_optimization_set_precision.patch
 	patch -p1 < ./ghemical.release20111012.load_selected.patch
+	patch -p1 < ./ghemical.release20111012.render_xyz_axis.patch
 
 cash:
 	mv ghemical-3.0.0    ghemical-3.0.0.cashed
