molgroups_coordinate_cumsum_velocity_and_acceleration.patch

--- a/linux/release20111012/Makefile
+++ b/linux/release20111012/Makefile
@@ -97,6 +97,7 @@ getcodes: untar
 	patch -p1 < ./ghemical.release20111012.log_box_optimization_set_precision.patch
 	patch -p1 < ./ghemical.release20111012.load_selected.patch
 	patch -p1 < ./ghemical.release20111012.render_xyz_axis.patch
+	patch -p1 < ./ghemical.release20111012.molgroups_coordinate_cumsum_velocity_and_acceleration.patch
 
 cash:
 	mv ghemical-3.0.0    ghemical-3.0.0.cashed
