--- a/linux/release20111012/Makefile
+++ b/linux/release20111012/Makefile
@@ -98,6 +98,7 @@ getcodes: untar
 	patch -p1 < ./ghemical.release20111012.load_selected.patch
 	patch -p1 < ./ghemical.release20111012.render_xyz_axis.patch
 	patch -p1 < ./ghemical.release20111012.molgroups_coordinate_cumsum_velocity_and_acceleration.patch
+	patch -p1 < ./ghemical.release20111012.molgroups_read_trajectory_frame_atom.patch
 
 cash:
 	mv ghemical-3.0.0    ghemical-3.0.0.cashed
