--- a/linux/release20111012/Makefile
+++ b/linux/release20111012/Makefile
@@ -101,6 +101,7 @@ getcodes: untar
 	patch -p1 < ./ghemical.release20111012.molgroups_read_trajectory_frame_atom.patch
 	patch -p1 < ./ghemical.release20111012.molgroups_make_mol_plot_in_model.patch
 	patch -p1 < ./ghemical.release20111012.cumsum_work.patch
+	patch -p1 < ./ghemical.release20111012.cumsum_work_power.patch
 
 cash:
 	mv ghemical-3.0.0    ghemical-3.0.0.cashed
