ghemical.release20111012.trimtraj.patch added

--- a/linux/release20111012/Makefile
+++ b/linux/release20111012/Makefile
@@ -110,6 +110,7 @@ getcodes: untar
 	patch -p1 < ./ghemical.release20111012.is_trajectory_file_already_exists.patch
 	patch -p1 < ./ghemical.release20111012.nosehoover_file_version2.patch
 	patch -p1 < ./ghemical.release20111012.pressure-coupling.patch
+	patch -p1 < ./ghemical.release20111012.trimtraj.patch
 
 cash:
 	mv ghemical-3.0.0    ghemical-3.0.0.cashed
