time_correlation_functions added

--- a/linux/release20111012/Makefile
+++ b/linux/release20111012/Makefile
@@ -111,6 +111,8 @@ getcodes: untar
 	patch -p1 < ./ghemical.release20111012.nosehoover_file_version2.patch
 	patch -p1 < ./ghemical.release20111012.pressure-coupling.patch
 	patch -p1 < ./ghemical.release20111012.trimtraj.patch
+	patch -p1 < ./ghemical.release20111012.time_correlation_function_lib.patch
+	patch -p1 < ./ghemical.release20111012.time_correlation_function_proj.patch
 
 cash:
 	mv ghemical-3.0.0    ghemical-3.0.0.cashed
