make_all_conjugate_carbon_bonds added

--- a/linux/release20111012/Makefile
+++ b/linux/release20111012/Makefile
@@ -149,6 +149,8 @@ getcodes: untar
 	patch -p1 < ./ghemical.release20111012.time_correlation_function_proj.patch
 	patch -p1 < ./ghemical.release20111012.moldyn_langevin.patch
 	patch -p1 < ./ghemical.release20111012.moldyn_nosehoover.patch
+	patch -p1 < ./ghemical.release20111012.make_all_conjugate_carbon_bonds_lib.patch
+	patch -p1 < ./ghemical.release20111012.make_all_conjugate_carbon_bonds_proj.patch
 
 cash:
 	mv ghemical-3.0.0    ghemical-3.0.0.cashed
