ghemical.release20111012.langevin_random_force_energy_distribution.patch added

--- a/linux/release20111012/Makefile
+++ b/linux/release20111012/Makefile
@@ -151,6 +151,7 @@ getcodes: untar
 	patch -p1 < ./ghemical.release20111012.moldyn_nosehoover.patch
 	patch -p1 < ./ghemical.release20111012.make_all_conjugate_carbon_bonds_lib.patch
 	patch -p1 < ./ghemical.release20111012.make_all_conjugate_carbon_bonds_proj.patch
+	patch -p1 < ./ghemical.release20111012.langevin_random_force_energy_distribution.patch
 
 cash:
 	mv ghemical-3.0.0    ghemical-3.0.0.cashed
